# ServidorPI

./: .gitignore  issues.txt  pyproject.toml
migrations/: env.py
migrations/versions/: f1daac12d02e_create_tables.py
server/: base_de_dados.py  dashboard.py  entrypoint_fastapi.py  modelos.py  schemas.py  serviços.py
server/rotas/: acessos.py  cartões.py  dispositivos.py  usuários.py
tests/: conftest.py  tests_entrypoints.py  tests_modelos.py  tests_serviços.py
