[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Libianno <ilibianno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"
fastapi = "^0.112.2"
alembic = "^1.13.2"
streamlit = "^1.38.0"

[tool.pytest.ini_options]
pythonpath = [
".", "server",
]
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
